Font alignment issues on Admin Login page

--- a/src/admin/css/AdminPageLogin.css
+++ b/src/admin/css/AdminPageLogin.css
@@ -13,7 +13,8 @@
 }
 
 .AdminLoginPage p {
-    font-size: max(11px, calc(11px + 0.2vw));
+    /* font-size: max(11px, calc(11px + 0.2vw)); */
+    font-size: 12px;
 }
 
 .AdminLoginPage input[type="text"], input[type="password"] {
@@ -38,7 +39,7 @@
     float: left;
     
     margin: 0;
-    margin-top: 3px;
+    margin-top: 4px;
 }
 
 .AdminLoginPage p {
